# mcp_langgraph_system

./: .env.example  Dockerfile.fastapi  Dockerfile.mcp  Makefile  README.md  docker-compose.yml  mcp_langgraph_system.postman_collection.json  prometheus.yml  pyproject.toml  requirements.txt  uvicorn_runner.py
agent_app/api/: Dockerfile  __init__.py  fastapi_app.py  metrics_middleware.py  models.py
agent_app/api/models/: request_models.py  response_models.py
agent_app/api/routers/: audit.py  chat.py  health.py
agent_app/api/routes/: agent.py  chat.py  healthy.py  tools.py
agent_app/core/: agent_graph.py  audit_logger.py  history.py  state.py
agent_app/core/agent/: graph.py  interfaces.py  state.py  tools.py
agent_app/core/chat/: session.py
agent_app/core/config/: settings.py
agent_app/core/nodes/: llm_node.py  router_node.py  tool_node.py
agent_app/core/observability/: metrics.py
agent_app/services/llm/: anthropic_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider.py
agent_app/services/mcp/: client.py
agent_app/services/storage/: audit_repo.py  vector_db.py
agent_app/services/storage/vector_db/: __init__.py  chroma_backend.py  embeddings.py  faiss_backend.py  pgvector_backend.py  sqlite_backend.py  vector_factory.py
agent_app/ui/: Dockerfile  streamlit_app.py
grafana_dashboards/: langgraph_agent_dashboard.json  mcp_tools_dashboard.json  system_observability_dashboard.json
mcp_server/: __init__.py  main.py  run_server.py  server.py
mcp_server/tools/: api_fetch_tool.py  example_tool.py  health_tool.py  rag_index_tool.py  rag_query_tool.py
mcp_server/vector_store/: chroma_store.py
monitoring/: grafana_dashboard.json
tests/: conftest.py  test_agent.py  test_agent_graph.py  test_api.py  test_audit_repo.py  test_mcp_client.py  test_rag_tool.py  test_tool_registry.py  test_tools.py  test_vectorstore.py
