[project]
name = "mcp_langgraph_system"
version = "0.1.0"
description = "Hybrid LangGraph + MCP + RAG Agent with FastAPI, Streamlit, Observability, and CI/CD."
authors = [
    { name = "yoshrawat" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13.2"

dependencies = [
    "fastapi==0.115.2",
    "uvicorn==0.30.1",
    "streamlit==1.37.1",

    # LangChain / LangGraph (compatible versions)
    "langchain==0.2.16",
    "langchain-core==0.2.39",
    "langchain-community==0.2.24",
    "langgraph==0.2.20",

    # LLM + Embeddings
    "ollama==0.1.9",
    "sentence-transformers==3.0.1",

    # MCP
    "mcp==0.1.5",
    "langchain-mcp-adapters==0.1.4",

    # Vector DB
    "chromadb==0.5.5",
    "SQLAlchemy==2.0.31",
    "pysqlite3-binary==0.5.3",

    # Metrics
    "prometheus-client==0.20.0",

    # HTTP Clients
    "httpx==0.27.0",
    "requests==2.32.3",

    # Pydantic V2
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",

    # Observability
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-instrumentation-fastapi==0.46b0",

    "python-dotenv==1.0.1",
    "typing-extensions==4.12.2"
]


[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "ruff==0.5.0",
    "mypy==1.10.1",
    "types-requests==2.32.0.20240622"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
exclude = ["tests"]

# ----------------------------
# Ruff Linting Configuration
# ----------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "B"]
ignore = ["E501"]

# ----------------------------
# Mypy Configuration
# ----------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ----------------------------
# Pytest + Coverage Configuration
# ----------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = """
    --cov=agent_app
    --cov-report=xml
    --cov-report=term-missing
    --cov-fail-under=70
"""
